ruka/rook-ceph/multisite/multisite-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-rgw-multisite-store-ingress
  namespace: rook-ceph

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  tls:
  - hosts:
    - s3test.ruka.dev.lsst.org
    secretName: rook-ceph-rgw-multisite-store-ingress-tls
  rules:
  - host: s3test.ruka.dev.lsst.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-rgw-multisite-store
            port:
              number: 80
